<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    android:orientation="vertical"
    tools:context=".ui.reminder.ReminderActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:weightSum="4">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/daily_reminder"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_marginTop="10dp"
                android:text="@string/reminder_for_return_app" />

        </LinearLayout>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/sc_reminder"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:switchMinWidth="50dp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1.5dp"
        android:background="@color/grey"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:weightSum="4">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/release_reminder"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_marginTop="10dp"
                android:text="@string/reminder_showing_the_movie_if_that_released_today" />

        </LinearLayout>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/sc_release"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:switchMinWidth="50dp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1.5dp"
        android:background="@color/grey"/>

</LinearLayout>