<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="220dp"
    android:layout_marginStart="1dp"
    android:layout_marginEnd="1dp"
    android:layout_marginTop="3dp"
    android:layout_marginBottom="3dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="3"
        android:padding="5dp">

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:cardCornerRadius="10dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/grey"
                android:scaleType="centerCrop"
                android:contentDescription="@string/testing" />

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:layout_marginStart="12dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="2"
                android:background="@color/grey"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:background="@color/grey"
                android:textSize="14sp"
                android:layout_marginTop="12dp"/>

            <LinearLayout
                android:id="@+id/ll_item"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:orientation="horizontal"
                android:layout_marginTop="5dp"
                android:background="@color/grey"
                android:weightSum="3">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.4"
                    android:scaleType="fitXY"
                    android:contentDescription="@string/testing" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2.5"
                    android:gravity="center_vertical"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ellipsize="end"
                android:maxLines="3"
                android:textSize="14sp"
                android:background="@color/grey"
                android:text="@string/release"
                android:textColor="@color/grey"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="3"
                android:layout_marginTop="5dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:background="@color/grey"
                android:textColor="@color/grey"
                android:text="@string/_2_december_2019" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ellipsize="end"
                android:background="@color/grey"
                android:textColor="@color/grey"
                android:maxLines="3"
                android:textSize="14sp"
                android:text="@string/duration" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:textSize="18sp"
                android:textStyle="bold"
                android:maxLines="3"
                android:layout_marginTop="5dp"
                android:background="@color/grey"
                android:textColor="@color/grey"
                android:text="@string/lorem" />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>