<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

        <RelativeLayout
            android:id="@+id/rl_detail"
            android:layout_width="match_parent"
            android:layout_height="225dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/iv_detail"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:contentDescription="@string/gambar_poster"
                android:scaleType="centerCrop"
                android:src="@mipmap/ic_launcher" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_like_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="30dp"
                android:backgroundTint="@color/grey"
                android:contentDescription="@string/gambar_poster"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_favorite_border_black_24dp" />

        </RelativeLayout>

        <TextView
            android:id="@+id/tv_name_detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="ajasndkjasndkansdjkansdkj kaskjda"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rl_detail" />

        <ImageView
            android:id="@+id/iv_rating_detail"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/testing"
            android:scaleType="fitXY"
            android:src="@drawable/ic_star_black_24dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_name_detail" />

        <TextView
            android:id="@+id/tv_rating_detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="23dp"
            android:layout_weight="2.5"
            android:maxLines="1"
            android:text="@string/lorem"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toRightOf="@id/iv_rating_detail"
            app:layout_constraintTop_toBottomOf="@id/tv_name_detail" />

        <TextView
            android:id="@+id/tvs_release_detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="2.5"
            android:maxLines="1"
            android:text="@string/release"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_rating_detail" />

        <TextView
            android:id="@+id/tv_release_detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="2.5"
            android:maxLines="1"
            android:text="@string/lorem"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvs_release_detail" />

        <TextView
            android:id="@+id/tvs_popularity_detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="2.5"
            android:maxLines="1"
            android:text="@string/popularity"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_release_detail" />

        <TextView
            android:id="@+id/tv_popularity_detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="2.5"
            android:maxLines="1"
            android:text="@string/lorem"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvs_popularity_detail" />

        <View
            android:id="@+id/view_detail"
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_marginTop="20dp"
            android:background="@color/colorAccent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_popularity_detail" />

        <TextView
            android:id="@+id/tvs_description_detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="2.5"
            android:maxLines="1"
            android:text="@string/description"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_detail" />

        <TextView
            android:id="@+id/tv_description_detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2.5"
            android:text="@string/lorem"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvs_description_detail" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>